--- a/LLM/examples/multi/ll/blocksworld/actions.yaml
+++ b/LLM/examples/multi/ll/blocksworld/actions.yaml
@@ -38,7 +38,8 @@ entries:
             at(b1,1,1), at(b2,2,2), at(b3,3,3),
             clear(b1), clear(b2), clear(b3),
             available(a1), available(a2),
-            ll_arm_at(a1,0,0), ll_arm_at(a2,10,10)
+            ll_arm_at(a1,0,0), ll_arm_at(a2,10,10),
+            ll_gripper(a1, open), ll_gripper(a2, open)
           ]).
           ```
           
@@ -48,7 +49,8 @@ entries:
             at(b1,1,1), at(b2,2,2), at(b3,1,1),
             clear(b2), clear(b3),
             available(a1), available(a2),
-            ll_arm_at(a1,_,_), ll_arm_at(a2,_,_)
+            ll_arm_at(a1,_,_), ll_arm_at(a2,_,_),
+            ll_gripper(a1, _), ll_gripper(a2, _)
           ]).
           ```
 
@@ -76,11 +78,12 @@ entries:
           Sure. Here is the list of low-level actions with the correct tag:
           ```ll_actions
           ll_action(grip_start(A),
-            [],
+            [ll_gripper(A, open)],
             [ll_arm_gripping(A), ll_gripped(A)],
             [],
             [ll_arm(A)],
             [
+              del(ll_gripper(A, open)),
               add(ll_arm_gripping(A))
             ]
           ).
@@ -92,16 +95,17 @@ entries:
             [ll_arm(A)],
             [
               del(ll_arm_gripping(A)),
-              add(ll_gripped(A))
+              add(ll_gripper(A, closed))
             ]
           ).
 
           ll_action(release_start(A),
-            [ll_gripped(A)],
+            [ll_gripper(A, closed)],
             [],
             [],
             [ll_arm(A)],
             [
+              del(ll_gripper(A, closed)),
               add(ll_arm_releasing(A))
             ]
           ).
@@ -113,7 +117,7 @@ entries:
             [ll_arm(A)],
             [
               del(ll_arm_releasing(A)),
-              del(ll_gripped(A))
+              add(ll_gripper(A, open))
             ]
           ).
 
@@ -164,11 +168,12 @@ entries:
 
           ```prolog
           ll_action(grip_start(A),
-            [],
+            [ll_gripper(A, open)],
             [ll_arm_gripping(A), ll_gripped(A)],
             [],
             [ll_arm(A)],
             [
+              del(ll_gripper(A, open)),
               add(ll_arm_gripping(A))
             ]
           ).
@@ -180,16 +185,17 @@ entries:
             [ll_arm(A)],
             [
               del(ll_arm_gripping(A)),
-              add(ll_gripped(A))
+              add(ll_gripper(A, closed))
             ]
           ).
 
           ll_action(release_start(A),
-            [ll_gripped(A)],
+            [ll_gripper(A, closed)],
             [],
             [],
             [ll_arm(A)],
             [
+              del(ll_gripper(A, closed)),
               add(ll_arm_releasing(A))
             ]
           ).
@@ -201,7 +207,7 @@ entries:
             [ll_arm(A)],
             [
               del(ll_arm_releasing(A)),
-              del(ll_gripped(A))
+              add(ll_gripper(A, open))
             ]
           ).
 
@@ -248,11 +254,12 @@ entries:
 
           ```ll_actions
           ll_action(grip_start(A),
-            [],
+            [ll_gripper(A, open)],
             [ll_arm_gripping(A), ll_gripped(A)],
             [],
             [ll_arm(A)],
             [
+              del(ll_gripper(A, open)),
               add(ll_arm_gripping(A))
             ]
           ).
@@ -264,16 +271,17 @@ entries:
             [ll_arm(A)],
             [
               del(ll_arm_gripping(A)),
-              add(ll_gripped(A))
+              add(ll_gripper(A, closed))
             ]
           ).
 
           ll_action(release_start(A),
-            [ll_gripped(A)],
+            [ll_gripper(A, closed)],
             [],
             [],
             [ll_arm(A)],
             [
+              del(ll_gripper(A, closed)),
               add(ll_arm_releasing(A))
             ]
           ).
@@ -285,7 +293,7 @@ entries:
             [ll_arm(A)],
             [
               del(ll_arm_releasing(A)),
-              del(ll_gripped(A))
+              add(ll_gripper(A, open))
             ]
           ).
 
