--- a/llm_ui/frontend/package.json
+++ b/llm_ui/frontend/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "^5.0.0",
     "axios": "^1.0.0",
     "react-router-dom": "^6.0.0",
-    "bootstrap": "^5.3.0"
+    "bootstrap": "^5.3.0",
+    "url-join" : "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
