--- a/LLM/examples/multi/hl/blocksworld/actions.yaml
+++ b/LLM/examples/multi/hl/blocksworld/actions.yaml
@@ -156,8 +156,7 @@ entries:
           Sure, here is the description of the actions
           ```actions
           % Move Block1 from (X1,Y1) on the table to the top of block Block2 in (X2,Y2). Notice that we are not removing the predicates for Block2 yet as the action is not concluded yet.
-          action(
-            move_table_to_block_start(Agent, Block1, Block2, X1, Y1, X2, Y2),
+          action(move_table_to_block_start(Agent, Block1, Block2, X1, Y1, X2, Y2),
             [available(Agent), ontable(Block1), at(Block1, X1, Y1), at(Block2, X2, Y2), clear(Block2), clear(Block1)],
             [on(_, Block1), on(Block1, _), moving_table_to_table(_, Block, _, _, _, _), moving_table_to_block(_, Block, _, _, _, _, _)],
             [],
@@ -167,8 +166,7 @@ entries:
               add(moving_table_to_block(Agent, Block1, Block2, X1, Y1, X2, Y2))
             ]
           ).
-          action(
-            move_table_to_block_end(Agent, Block1, Block2, X1, Y1, X2, Y2),
+          action(move_table_to_block_end(Agent, Block1, Block2, X1, Y1, X2, Y2),
             [moving_table_to_block(Agent, Block1, Block2, X1, Y1, X2, Y2), clear(Block2)],
             [],
             [],
@@ -179,8 +177,7 @@ entries:
             ]
           ).
           % Move a block from a position (X1,Y1) to another position (X2,Y2) on the table. 
-          action(
-            move_table_to_table_start(Agent, Block, X1, Y1, X2, Y2), 
+          action(move_table_to_table_start(Agent, Block, X1, Y1, X2, Y2), 
             [ontable(Block), at(Block, X1, Y1), available(Agent), clear(Block)],
             [at(_, X2, Y2), on(Block, _), moving_table_to_table(_, Block, _, _, _, _), moving_table_to_block(_, Block, _, _, _, _, _)],
             [],
@@ -190,8 +187,7 @@ entries:
               add(moving_table_to_table(Agent, Block, X1, Y1, X2, Y2))
             ]
           ).
-          action(
-            move_table_to_table_end(Agent, Block, X1, Y1, X2, Y2),
+          action(move_table_to_table_end(Agent, Block, X1, Y1, X2, Y2),
             [moving_table_to_table(Agent, Block, X1, Y1, X2, Y2)],
             [at(X2, Y2)],
             [],
@@ -202,8 +198,7 @@ entries:
             ]
           ).
           % Move Block1 from (X1,Y1) on top of another block to the table in (X2,Y2).
-          action(
-            move_onblock_to_table_start(Agent, Block1, X1, Y1, X2, Y2),
+          action(move_onblock_to_table_start(Agent, Block1, X1, Y1, X2, Y2),
             [available(Agent), on(Block1, Block2), at(Block1, X1, Y1), at(Block2, X1, Y1), clear(Block1)],
             [moving_onblock_to_table(_, Block1, _, _, _, _), on(_, Block1), ontable(Block1), at(_, X2, Y2)],
             [],
@@ -213,8 +208,7 @@ entries:
               add(moving_onblock_to_table(Agent, Block1, X1, Y1, X2, Y2)), add(clear(Block2))
             ]
           ).
-          action(
-            move_onblock_to_table_end(Agent, Block1, X1, Y1, X2, Y2),
+          action(move_onblock_to_table_end(Agent, Block1, X1, Y1, X2, Y2),
             [moving_onblock_to_table(Agent, Block1, X1, Y1, X2, Y2)],
             [at(_, X2, Y2)],
             [],
@@ -225,8 +219,7 @@ entries:
             ]
           ).
           % Move Block1 from (X1,Y1) on top of another block to the top of block Block2 in (X2,Y2). Notice that we are not removing the predicates for Block2 yet as the action is not concluded yet.
-          action(
-            move_onblock_to_block_start(Agent, Block1, Block2, X1, Y1, X2, Y2),
+          action(move_onblock_to_block_start(Agent, Block1, Block2, X1, Y1, X2, Y2),
             [available(Agent), on(Block1, Block3), at(Block1, X1, Y1), at(Block2, X2, Y2), clear(Block2), clear(Block1)],
             [moving_onblock_to_block(_, Block1, _, _, _, _), on(_, Block1), ontable(Block1)],
             [],
@@ -236,8 +229,7 @@ entries:
               add(moving_onblock_to_block(Agent, Block1, Block2, X1, Y1, X2, Y2)), add(clear(Block3))
             ]
           ).
-          action(
-            move_onblock_to_block_end(Agent, Block1, Block2, X1, Y1, X2, Y2),
+          action(move_onblock_to_block_end(Agent, Block1, Block2, X1, Y1, X2, Y2),
             [moving_onblock_to_block(Agent, Block1, Block2, X1, Y1, X2, Y2), clear(Block2)],
             [],
             [],
