--- a/LLM/examples/multi/ll/general.yaml
+++ b/LLM/examples/multi/ll/general.yaml
@@ -199,8 +199,7 @@ entries:
           In our knowledge base, every action is splitted into 'start' and 'end' actions for both durative and instantaneous actions.
           Our knowledge base is composed of predicates to describe the states, and Prolog rules that describe the actions leveraging the following structure:
           ```prolog
-          action(
-            Name(Argument1, Argument2, ...), 
+          action(Name(Argument1, Argument2, ...), 
             ValidConditions, 
             InvalidConditions, 
             InvalidConditionsAtEnd, 
