--- a/LLM/examples/single/hl/general.yaml
+++ b/LLM/examples/single/hl/general.yaml
@@ -49,8 +49,7 @@ entries:
           In our knowledge base, every action is spilt into 'start' and 'end' actions.
           Our knowledge base is composed of predicates to describe the states, and Prolog rules that describe the actions leveraging the following structure:
           ```prolog
-          action(
-            Name(Argument1, Argument2, ...), 
+          action(Name(Argument1, Argument2, ...), 
             ValidConditions, 
             InvalidConditions, 
             InvalidConditionsAtEnd, 
