--- a/LLM/examples/multi/hl/teamaking/actions.yaml
+++ b/LLM/examples/multi/hl/teamaking/actions.yaml
@@ -14,80 +14,89 @@ entries:
         content: |
           % The robot starts to hold an object
           action(hold_start(Object),
-              [available(robot), at(robot, Place), at(Object, Place)], 
-              [holding(_)], 
-              [], 
-              [],
-              [del(available(robot)), del(at(Object, Place)), add(holding(Object))]).
+            [available(robot), at(robot, Place), at(Object, Place)], 
+            [holding(_)], 
+            [], 
+            [],
+            [
+              del(available(robot)), del(at(Object, Place)), 
+              add(holding(Object))
+            ]).
 
 
           % The robot stops to hold an object
           action(hold_end(Object), 
-              [holding(Object)], 
-              [], 
-              [], 
-              [],
-              [del(holding(Object)), add(available(robot)), add(at(Object, kitchen))]).
+            [holding(Object)], 
+            [], 
+            [], 
+            [],
+            [
+              del(holding(Object)), 
+              add(available(robot)), add(at(Object, kitchen))
+            ]).
 
 
           % The robot starts to put water in a kettle
           action(fill_kettle_start, 
-              [at(robot, kitchen), holding(kettle), empty(kettle)], 
-              [full(kettle)], 
-              [], 
-              [],
-              [del(empty(kettle))]).
+            [at(robot, kitchen), holding(kettle), empty(kettle)], 
+            [full(kettle)], 
+            [], 
+            [],
+            [del(empty(kettle))]).
 
 
           % The robot stops to put water in a kettle
           action(fill_kettle_end, 
-              [at(robot, kitchen), holding(kettle)], 
-              [empty(kettle)], 
-              [], 
-              [],
-              [add(full(kettle)), add(cold(water))]).
+            [at(robot, kitchen), holding(kettle)], 
+            [empty(kettle)], 
+            [], 
+            [],
+            [add(full(kettle)), add(cold(water))]).
 
 
           % The robot starts to boil water in kettle and the water is not cold anymore
           action(boil_water_start, 
-              [at(robot, kitchen), holding(kettle), full(kettle), cold(water)], 
-              [empty(kettle), boiled(water)], 
-              [],
-              [], 
-              [del(cold(water))]).
+            [at(robot, kitchen), holding(kettle), full(kettle), cold(water)], 
+            [empty(kettle), boiled(water)], 
+            [],
+            [], 
+            [del(cold(water))]).
 
 
           % The robot stops to boil water in kettle 
           action(boil_water_end,
-              [at(robot, kitchen), holding(kettle), full(kettle)],
-              [cold(water)],
-              [],
-              [],
-              [add(boiled(water))]).
+            [at(robot, kitchen), holding(kettle), full(kettle)],
+            [cold(water)],
+            [],
+            [],
+            [add(boiled(water))]).
 
 
           % The robot starts to put water in a cup from a kettle
           action(pour_water_start,
-              [at(robot, kitchen), holding(kettle), full(kettle), boiled(water), empty(cup), at(cup, kitchen)], 
-              [empty(kettle), full(cup)],
-              [],
-              [],
-              [del(empty(cup)), del(full(kettle))]).
+            [at(robot, kitchen), holding(kettle), full(kettle), boiled(water), empty(cup), at(cup, kitchen)], 
+            [empty(kettle), full(cup)],
+            [],
+            [],
+            [del(empty(cup)), del(full(kettle))]).
 
 
           % The robot stops to put water in a cup from a kettle
           action(pour_water_end,
-              [at(robot, kitchen), holding(kettle), boiled(water), at(cup, kitchen)],
-              [],
-              [],
-              [],
-              [add(full(cup))]).
+            [at(robot, kitchen), holding(kettle), boiled(water), at(cup, kitchen)],
+            [],
+            [],
+            [],
+            [add(full(cup))]).
 
 
           % The robot puts a teabag in a cup
           action(add_teabag, 
-              [at(robot, kitchen), holding(teabag), at(cup, kitchen), boiled(water), full(cup), tea(notready)], 
-              [], 
-              [], 
-              [],
-              [del(tea(notready)), add(tea(ready)), add(available(robot)), del(holding(teabag)), del(boiled(water))]).
+            [at(robot, kitchen), holding(teabag), at(cup, kitchen), boiled(water), full(cup), tea(notready)], 
+            [], 
+            [], 
+            [],
+            [
+              del(tea(notready)), del(holding(teabag)), del(boiled(water)),
+              add(tea(ready)), add(available(robot))
+            ]).
