--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -4,13 +4,11 @@ FROM node:18 AS build
 # Set the working directory
 WORKDIR /app
 
-# Copy package.json and install dependencies
-COPY package.json ./
+# Copy all project files
+COPY llm_ui/frontend .
+
 RUN npm install
 
-# Copy all project files
-COPY . .
-
-# Build the React app for production
 CMD ["npm", "start"]
+# CMD ["ping", "172.20.0.2"]
 
