--- a/LLM/conf/llama2.yaml
+++ b/LLM/conf/llama2.yaml
@@ -1,4 +1,4 @@
-LLM_VERSION: "ollama-local"
+LLM_VERSION: "ollama-llama2"
 API_TYPE: "ollama"
 BASE_URL: "http://localhost:11434"
 MODEL_NAME: "llama2"
