--- a/LLM/conf/local-qlora-qwen-0.5B.yaml
+++ b/LLM/conf/local-qlora-qwen-0.5B.yaml
@@ -1,4 +1,4 @@
-API_TYPE: "local_qwen"
+API_TYPE: "local"
 MODEL_NAME_DISPLAY: "Fine-tuned QLoRA Qwen Coder 0.5B"
 MODEL_PATH: "model_training/qwen_coder_prolog_qlora_finetuned_final"
 IS_QLORA_MODEL: true
